src/test/deca/syntax/valid/testreadInt.deca
// test readInt

{
  int x;
  x = readInt();
  print(x*x);


}
