src/test/deca/syntax/invalid/testPrint5.deca
// print invalid characters
// Result : Error
{
    println(());
}
